--- a/scripts/clone_repo.ipynb
+++ b/scripts/clone_repo.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/lucprosa/dataeng-basic-course/blob/main/scripts/clone_repo.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/tomassalcedas/dataeng/blob/main/scripts/clone_repo.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -30,20 +30,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "3p2vImyKt0x3",
-        "outputId": "fda0fb2c-a9d9-4979-e6a5-3b3a2cd21a0f"
+        "outputId": "04340c91-16d3-46be-b1cc-0025a8b33278"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Mounted at /collab/\n"
+            "Drive already mounted at /collab/; to attempt to forcibly remount, call drive.mount(\"/collab/\", force_remount=True).\n"
           ]
         }
       ],
@@ -60,54 +60,53 @@
       "metadata": {
         "id": "w1xOtqm65cHQ"
       },
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "3Z_Exc3bvxyd",
-        "outputId": "108613d9-8690-48fb-c0be-92243f55b8a9"
+        "outputId": "213fefa5-dfa6-404f-9b68-413d9e790e5b"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "/content/drive/MyDrive/Collab/repos\n"
+            "/content/dataeng\n"
           ]
         }
       ],
       "source": [
-        "%cd /collab/MyDrive/Collab/repos/"
+        "%cd /content/dataeng"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "DuQlhuRvwLKS",
-        "outputId": "12736016-ddf3-4ad4-dffc-2556582b4be1"
+        "outputId": "7df53445-f949-40c7-d451-bf6878078c1f"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Cloning into 'dataeng-basic-course'...\n",
-            "warning: You appear to have cloned an empty repository.\n"
+            "fatal: destination path 'dataeng' already exists and is not an empty directory.\n"
           ]
         }
       ],
       "source": [
-        "! git clone https://github.com/lucprosa/dataeng-basic-course.git"
+        "! git clone https://github.com/tomassalcedas/dataeng.git"
       ]
     }
   ],
