Criado através do Colab

--- a/scripts/clone_repo.ipynb
+++ b/scripts/clone_repo.ipynb
@@ -30,13 +30,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 40,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "3p2vImyKt0x3",
-        "outputId": "04340c91-16d3-46be-b1cc-0025a8b33278"
+        "outputId": "815237f4-b6a9-41b4-959d-d115fa7100ee"
       },
       "outputs": [
         {
@@ -60,54 +60,69 @@
       "metadata": {
         "id": "w1xOtqm65cHQ"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 41,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "3Z_Exc3bvxyd",
-        "outputId": "213fefa5-dfa6-404f-9b68-413d9e790e5b"
+        "outputId": "f1c7714b-3a93-463c-cef9-3e141c7eb0c0"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "/content/dataeng\n"
+            "/collab/MyDrive/Collab/repos\n"
           ]
         }
       ],
       "source": [
-        "%cd /content/dataeng"
+        "%cd /collab/MyDrive/Collab/repos/"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 42,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "DuQlhuRvwLKS",
-        "outputId": "7df53445-f949-40c7-d451-bf6878078c1f"
+        "outputId": "0a2d0663-6607-4b75-ae9b-38ff9cc5131f"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "fatal: destination path 'dataeng' already exists and is not an empty directory.\n"
+            "Cloning into 'dataeng'...\n",
+            "remote: Enumerating objects: 58, done.\u001b[K\n",
+            "remote: Counting objects: 100% (58/58), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (44/44), done.\u001b[K\n",
+            "remote: Total 58 (delta 20), reused 32 (delta 10), pack-reused 0 (from 0)\u001b[K\n",
+            "Receiving objects: 100% (58/58), 77.40 KiB | 808.00 KiB/s, done.\n",
+            "Resolving deltas: 100% (20/20), done.\n"
           ]
         }
       ],
       "source": [
         "! git clone https://github.com/tomassalcedas/dataeng.git"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "JUYx8NHe8ms-"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
