Criado através do Colab

--- a/spark/examples/01-rdds.ipynb
+++ b/spark/examples/01-rdds.ipynb
@@ -43,7 +43,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uYXeODL0T1fO",
-        "outputId": "28a38985-62ed-47fa-841e-af8bd1a2786d"
+        "outputId": "cc4b7b64-325a-4c0d-9368-59497610d2b5"
       },
       "outputs": [
         {
@@ -61,7 +61,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "637HFw00T3LP"
       },
@@ -73,7 +73,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "_WW76P6DpLpx"
       },
@@ -87,7 +87,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "SqwZjdL9MnL6"
       },
@@ -107,7 +107,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "DZaxZW0bMZ3F"
       },
@@ -122,7 +122,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "a8eCChgrMZ3H"
       },
@@ -142,7 +142,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "8UzHNVzynNm-"
       },
@@ -158,7 +158,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "5qs9KNmJMZ3I"
       },
@@ -170,7 +170,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "id": "h1ftjIsEMZ3J"
       },
@@ -185,13 +185,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "PJr1dWvFMZ3J",
-        "outputId": "37f79f60-1c1b-4efa-9712-f216e48037af"
+        "outputId": "e8b56815-f142-42d0-bf02-62dde7072e6b"
       },
       "outputs": [
         {
@@ -221,13 +221,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "QKflP9NxpweG",
-        "outputId": "69fe0c3a-b89e-4c9a-a1fe-84c864f4518d"
+        "outputId": "c01fce39-f56a-440b-859d-5edb5b55e407"
       },
       "outputs": [
         {
@@ -238,7 +238,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 11
         }
       ],
       "source": [
@@ -247,30 +247,63 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "eFgcn2llperu",
-        "outputId": "5cbffb85-a514-41ba-8e3d-496ed620cb51"
+        "outputId": "0890fee4-adb0-408b-ff50-cd453df59f64"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "PythonRDD[26] at RDD at PythonRDD.scala:53"
+              "PythonRDD[8] at RDD at PythonRDD.scala:53"
             ]
           },
           "metadata": {},
-          "execution_count": 24
+          "execution_count": 12
         }
       ],
       "source": [
         "### if we want to use lineLenghts again\n",
         "lineLengths.persist()\n",
         "### before the reduce, which would cause lineLengths to be saved in memory after the first time it is computed."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "P19H14eVG4IZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "id": "gtUxJjksHikT",
+        "outputId": "4ec973a4-bd1f-420b-c60c-f98db08333ad",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
       ]
     }
   ],
