Criado através do Colab

--- a/spark/examples/02-dataframes.ipynb
+++ b/spark/examples/02-dataframes.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/lucprosa/dataeng-basic-course/blob/main/spark/examples/02-dataframes.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/tomassalcedas/dataeng/blob/main/spark/examples/02-dataframes.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -44,18 +44,55 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "uYXeODL0T1fO"
+        "id": "uYXeODL0T1fO",
+        "outputId": "bd29fb67-b0b3-4fea-c40a-3ae7522ef9d8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: pyspark in /usr/local/lib/python3.11/dist-packages (3.5.1)\n",
+            "Requirement already satisfied: py4j==0.10.9.7 in /usr/local/lib/python3.11/dist-packages (from pyspark) (0.10.9.7)\n"
+          ]
+        }
+      ],
       "source": [
         "%pip install pyspark"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "id": "K17ae1ZLJIdz",
+        "outputId": "9317b720-d19b-4f37-a745-03fe7c1c6820",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
       "metadata": {
         "id": "637HFw00T3LP"
       },
@@ -80,11 +117,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
-        "id": "kxrxuq69ap75"
+        "id": "kxrxuq69ap75",
+        "outputId": "30cace38-68c2-4b1f-9b43-6b0cc0393742",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+---+-----+\n",
+            "|col|value|\n",
+            "+---+-----+\n",
+            "| c1|   v1|\n",
+            "| c2|   v2|\n",
+            "| c3|   v3|\n",
+            "+---+-----+\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "# Creating from RDDs\n",
         "# .toDF()\n",
