--- a/spark/examples/03-sql.ipynb
+++ b/spark/examples/03-sql.ipynb
@@ -27,7 +27,7 @@
       ],
       "metadata": {
         "id": "GRbnHCDPRjJj",
-        "outputId": "733f28a0-8622-4cb9-f652-6601cd26e1d3",
+        "outputId": "d36f399e-250c-4ed0-d29d-b983ef14d995",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -70,7 +70,7 @@
       "execution_count": 2,
       "metadata": {
         "id": "uYXeODL0T1fO",
-        "outputId": "7d8e3237-82dd-44ca-abd3-8992cfc1325f",
+        "outputId": "a95c8cf8-4540-4520-f1e9-62a8c7f986d3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -91,7 +91,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "637HFw00T3LP"
       },
@@ -112,16 +112,35 @@
       "metadata": {
         "id": "KRpVFC8O1Z9N"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
-        "id": "KosbhJyJqMSI"
+        "id": "KosbhJyJqMSI",
+        "outputId": "04cc994d-fc79-432c-b6da-f2e3f8367e7d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+---+-----+\n",
+            "|col|value|\n",
+            "+---+-----+\n",
+            "| c1|   v1|\n",
+            "| c2|   v2|\n",
+            "| c3|   v3|\n",
+            "+---+-----+\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "# TempVIews - Session level\n",
         "df.createOrReplaceTempView(\"my_table\")\n",
@@ -130,11 +149,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
-        "id": "tkqjl78sqMSI"
+        "id": "tkqjl78sqMSI",
+        "outputId": "7f567cbb-210e-4339-8146-f6db9d0705fe",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+---+-----+\n",
+            "|col|value|\n",
+            "+---+-----+\n",
+            "| c1|   v1|\n",
+            "| c2|   v2|\n",
+            "| c3|   v3|\n",
+            "+---+-----+\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "# GlobalTempViews - Spark application level - global_temp database\n",
         "df.createOrReplaceGlobalTempView(\"my_table2\")\n",
@@ -143,11 +181,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
-        "id": "rk0SIo0nqRwL"
+        "id": "rk0SIo0nqRwL",
+        "outputId": "d9feb93e-9079-44ab-e611-3012f1270ba9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+---------+\n",
+            "|namespace|\n",
+            "+---------+\n",
+            "|  default|\n",
+            "|     test|\n",
+            "+---------+\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "# interating with catalog\n",
         "spark.sql(\"create schema test\")\n",
@@ -156,7 +212,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "dSbgHD32quHR"
       },
@@ -173,10 +229,28 @@
         "spark.sql(\"show tables from test\").show()"
       ],
       "metadata": {
-        "id": "YVFyShr2ZD5j"
+        "id": "YVFyShr2ZD5j",
+        "outputId": "8ad7d1f0-8d6a-4961-810a-041fe95ef7b1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+---------+---------+-----------+\n",
+            "|namespace|tableName|isTemporary|\n",
+            "+---------+---------+-----------+\n",
+            "|     test| my_table|      false|\n",
+            "|         | my_table|       true|\n",
+            "+---------+---------+-----------+\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -184,9 +258,36 @@
         "spark.sql(\"select * from test.my_table\").show()"
       ],
       "metadata": {
-        "id": "ISx7T8ddZVjl"
+        "id": "ISx7T8ddZVjl",
+        "outputId": "746d868b-b4bd-43cc-bb7b-5721f7b04d3d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+---+-----+\n",
+            "|col|value|\n",
+            "+---+-----+\n",
+            "| c1|   v1|\n",
+            "| c2|   v2|\n",
+            "+---+-----+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "J0_LmRPbTjCY"
+      },
+      "execution_count": 10,
       "outputs": []
     }
   ],
