Criado através do Colab

--- a/spark/examples/04-joins.ipynb
+++ b/spark/examples/04-joins.ipynb
@@ -3,10 +3,44 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/tomassalcedas/dataeng/blob/main/spark/examples/04-joins.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "4M10EVsXFrd_"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/lucprosa/dataeng-basic-course/blob/main/spark/examples/04-joins.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "id": "Fp98m_qLTvq2",
+        "outputId": "f1c48781-135f-4567-f5c6-ecdd28d6b1a5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
       ]
     },
     {
@@ -37,18 +71,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "uYXeODL0T1fO"
+        "id": "uYXeODL0T1fO",
+        "outputId": "b2266785-099f-44bb-a6d0-2f799d20d344",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: pyspark in /usr/local/lib/python3.11/dist-packages (3.5.1)\n",
+            "Requirement already satisfied: py4j==0.10.9.7 in /usr/local/lib/python3.11/dist-packages (from pyspark) (0.10.9.7)\n"
+          ]
+        }
+      ],
       "source": [
         "%pip install pyspark"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "637HFw00T3LP"
       },
@@ -80,7 +127,7 @@
       "metadata": {
         "id": "Us_jgkYJIhcT"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -90,10 +137,33 @@
         "employee.show()"
       ],
       "metadata": {
-        "id": "qudxqOymJj-s"
+        "id": "qudxqOymJj-s",
+        "outputId": "fb6db601-a89d-4142-8b5c-cc85c98d8bb7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+---+-----+----+\n",
+            "| id| name|dpto|\n",
+            "+---+-----+----+\n",
+            "|101|Chloe|   3|\n",
+            "|102| Paul|   1|\n",
+            "|103| John|   1|\n",
+            "|104| Lisa|   2|\n",
+            "|105| Evan|   3|\n",
+            "|106|  Amy|   3|\n",
+            "|107|Jimmy|   5|\n",
+            "+---+-----+----+\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -102,10 +172,30 @@
         "dpto.show()"
       ],
       "metadata": {
-        "id": "RXHcXZIPLfhZ"
+        "id": "RXHcXZIPLfhZ",
+        "outputId": "820f4f50-fbe6-4c3e-a06d-f11cd0dbdf2f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+----+-----------+\n",
+            "|dpto|   deptname|\n",
+            "+----+-----------+\n",
+            "|   1|Engineering|\n",
+            "|   2|      Sales|\n",
+            "|   3|  Marketing|\n",
+            "|   4|    Finance|\n",
+            "+----+-----------+\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -118,11 +208,44 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
-        "id": "3isk0KvuFreE"
+        "id": "3isk0KvuFreE",
+        "outputId": "da3156c3-0015-4a6e-d045-43443f74e7ab",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+----+---+-----+-----------+\n",
+            "|dpto| id| name|   deptname|\n",
+            "+----+---+-----+-----------+\n",
+            "|   1|102| Paul|Engineering|\n",
+            "|   1|103| John|Engineering|\n",
+            "|   2|104| Lisa|      Sales|\n",
+            "|   3|101|Chloe|  Marketing|\n",
+            "|   3|105| Evan|  Marketing|\n",
+            "|   3|106|  Amy|  Marketing|\n",
+            "+----+---+-----+-----------+\n",
+            "\n",
+            "+---+-----+----+----+-----------+\n",
+            "| id| name|dpto|dpto|   deptname|\n",
+            "+---+-----+----+----+-----------+\n",
+            "|102| Paul|   1|   1|Engineering|\n",
+            "|103| John|   1|   1|Engineering|\n",
+            "|104| Lisa|   2|   2|      Sales|\n",
+            "|101|Chloe|   3|   3|  Marketing|\n",
+            "|105| Evan|   3|   3|  Marketing|\n",
+            "|106|  Amy|   3|   3|  Marketing|\n",
+            "+---+-----+----+----+-----------+\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "# Inner join - exists on both sides\n",
         "employee.join(dpto, [\"dpto\"]).show()\n",
@@ -138,10 +261,33 @@
         "employee.join(dpto, employee[\"dpto\"] == dpto[\"dpto\"], how = \"left\").show()"
       ],
       "metadata": {
-        "id": "7kH24QHgL9NE"
+        "id": "7kH24QHgL9NE",
+        "outputId": "651389e5-e2b3-4799-f133-382e7b0df736",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+---+-----+----+----+-----------+\n",
+            "| id| name|dpto|dpto|   deptname|\n",
+            "+---+-----+----+----+-----------+\n",
+            "|107|Jimmy|   5|NULL|       NULL|\n",
+            "|102| Paul|   1|   1|Engineering|\n",
+            "|103| John|   1|   1|Engineering|\n",
+            "|101|Chloe|   3|   3|  Marketing|\n",
+            "|105| Evan|   3|   3|  Marketing|\n",
+            "|106|  Amy|   3|   3|  Marketing|\n",
+            "|104| Lisa|   2|   2|      Sales|\n",
+            "+---+-----+----+----+-----------+\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -151,10 +297,33 @@
         "employee.join(dpto, employee[\"dpto\"] == dpto[\"dpto\"], how = \"right\").show()"
       ],
       "metadata": {
-        "id": "0DvT6UdyM_0h"
+        "id": "0DvT6UdyM_0h",
+        "outputId": "dfd9b721-7c50-4643-818c-cf6d9578d1ae",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+----+-----+----+----+-----------+\n",
+            "|  id| name|dpto|dpto|   deptname|\n",
+            "+----+-----+----+----+-----------+\n",
+            "| 103| John|   1|   1|Engineering|\n",
+            "| 102| Paul|   1|   1|Engineering|\n",
+            "| 106|  Amy|   3|   3|  Marketing|\n",
+            "| 105| Evan|   3|   3|  Marketing|\n",
+            "| 101|Chloe|   3|   3|  Marketing|\n",
+            "| 104| Lisa|   2|   2|      Sales|\n",
+            "|NULL| NULL|NULL|   4|    Finance|\n",
+            "+----+-----+----+----+-----------+\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -164,10 +333,34 @@
         "employee.join(dpto, employee[\"dpto\"] == dpto[\"dpto\"], how = \"full\").show()"
       ],
       "metadata": {
-        "id": "cD5qkGyDNecI"
+        "id": "cD5qkGyDNecI",
+        "outputId": "bac0c1e4-6bcf-475b-fd15-855f3e7387d2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+----+-----+----+----+-----------+\n",
+            "|  id| name|dpto|dpto|   deptname|\n",
+            "+----+-----+----+----+-----------+\n",
+            "| 102| Paul|   1|   1|Engineering|\n",
+            "| 103| John|   1|   1|Engineering|\n",
+            "| 104| Lisa|   2|   2|      Sales|\n",
+            "| 101|Chloe|   3|   3|  Marketing|\n",
+            "| 105| Evan|   3|   3|  Marketing|\n",
+            "| 106|  Amy|   3|   3|  Marketing|\n",
+            "|NULL| NULL|NULL|   4|    Finance|\n",
+            "| 107|Jimmy|   5|NULL|       NULL|\n",
+            "+----+-----+----+----+-----------+\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -179,10 +372,33 @@
         "dpto.join(employee, employee[\"dpto\"] == dpto[\"dpto\"], how = \"left_anti\").show()"
       ],
       "metadata": {
-        "id": "eg4IpMjJNkzP"
+        "id": "eg4IpMjJNkzP",
+        "outputId": "e7ceb2d2-853c-4e4d-c4c9-f8d7d8c50d1f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+---+-----+----+\n",
+            "| id| name|dpto|\n",
+            "+---+-----+----+\n",
+            "|107|Jimmy|   5|\n",
+            "+---+-----+----+\n",
+            "\n",
+            "+----+--------+\n",
+            "|dpto|deptname|\n",
+            "+----+--------+\n",
+            "|   4| Finance|\n",
+            "+----+--------+\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -203,10 +419,33 @@
         "spark.sql(\"select * from employee left join dpto using (dpto)\").show()"
       ],
       "metadata": {
-        "id": "sWmJ_CmZQExG"
+        "id": "sWmJ_CmZQExG",
+        "outputId": "407e2449-9327-403c-a768-a5a9e5ede41e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+----+---+-----+-----------+\n",
+            "|dpto| id| name|   deptname|\n",
+            "+----+---+-----+-----------+\n",
+            "|   5|107|Jimmy|       NULL|\n",
+            "|   1|102| Paul|Engineering|\n",
+            "|   1|103| John|Engineering|\n",
+            "|   3|101|Chloe|  Marketing|\n",
+            "|   3|105| Evan|  Marketing|\n",
+            "|   3|106|  Amy|  Marketing|\n",
+            "|   2|104| Lisa|      Sales|\n",
+            "+----+---+-----+-----------+\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -232,10 +471,46 @@
         "employee_erp.show()"
       ],
       "metadata": {
-        "id": "1Kv63IAYUmJy"
+        "id": "1Kv63IAYUmJy",
+        "outputId": "5b0b9b3b-a75a-413a-8c15-a8eccf1b2857",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "HR database\n",
+            "+---+-----+----+\n",
+            "| id| name|dpto|\n",
+            "+---+-----+----+\n",
+            "|101|Chloe|   3|\n",
+            "|102| Paul|   1|\n",
+            "|103| John|   1|\n",
+            "|104| Lisa|   2|\n",
+            "|105| Evan|   3|\n",
+            "|106|  Amy|   3|\n",
+            "|107|Jimmy|   5|\n",
+            "+---+-----+----+\n",
+            "\n",
+            "ERP database\n",
+            "+---+------+----+\n",
+            "| id|  name|dpto|\n",
+            "+---+------+----+\n",
+            "|200|George|   5|\n",
+            "|201|  Anna|   5|\n",
+            "|202|  Carl|   3|\n",
+            "|101| Chloe|   3|\n",
+            "|103|  John|   1|\n",
+            "|106|   Amy|   1|\n",
+            "+---+------+----+\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -251,10 +526,59 @@
         "employee_hr.exceptAll(employee_erp).show()"
       ],
       "metadata": {
-        "id": "61QkSnA7WjI8"
+        "id": "61QkSnA7WjI8",
+        "outputId": "033283a4-117a-4ff4-89fe-1ba6ac54cd6e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Combine both dataframes\n",
+            "+---+------+----+\n",
+            "| id|  name|dpto|\n",
+            "+---+------+----+\n",
+            "|101| Chloe|   3|\n",
+            "|102|  Paul|   1|\n",
+            "|103|  John|   1|\n",
+            "|104|  Lisa|   2|\n",
+            "|105|  Evan|   3|\n",
+            "|106|   Amy|   3|\n",
+            "|107| Jimmy|   5|\n",
+            "|200|George|   5|\n",
+            "|201|  Anna|   5|\n",
+            "|202|  Carl|   3|\n",
+            "|101| Chloe|   3|\n",
+            "|103|  John|   1|\n",
+            "|106|   Amy|   1|\n",
+            "+---+------+----+\n",
+            "\n",
+            "Get values that are common in both dataframes\n",
+            "+---+-----+----+\n",
+            "| id| name|dpto|\n",
+            "+---+-----+----+\n",
+            "|101|Chloe|   3|\n",
+            "|103| John|   1|\n",
+            "+---+-----+----+\n",
+            "\n",
+            "Get only the difference - does not exist on the second dataframe\n",
+            "+---+-----+----+\n",
+            "| id| name|dpto|\n",
+            "+---+-----+----+\n",
+            "|106|  Amy|   3|\n",
+            "|105| Evan|   3|\n",
+            "|104| Lisa|   2|\n",
+            "|102| Paul|   1|\n",
+            "|107|Jimmy|   5|\n",
+            "+---+-----+----+\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -270,23 +594,94 @@
       "source": [
         "# Q1\n",
         "# Implement Cartesian Product using dataframe and SQL\n",
-        "# Use employee and dpto"
+        "# Use employee and dpto\n",
+        "\n",
+        "# Cartesian Product using crossJoin()\n",
+        "cartesian_df = employee.crossJoin(dpto)\n",
+        "cartesian_df.show()\n"
       ],
       "metadata": {
-        "id": "-SDXliPvNtnr"
+        "id": "-SDXliPvNtnr",
+        "outputId": "1b2e7b0a-d865-4c95-cc3b-6d934705f3af",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+---+-----+----+----+-----------+\n",
+            "| id| name|dpto|dpto|   deptname|\n",
+            "+---+-----+----+----+-----------+\n",
+            "|101|Chloe|   3|   1|Engineering|\n",
+            "|101|Chloe|   3|   2|      Sales|\n",
+            "|101|Chloe|   3|   3|  Marketing|\n",
+            "|101|Chloe|   3|   4|    Finance|\n",
+            "|102| Paul|   1|   1|Engineering|\n",
+            "|102| Paul|   1|   2|      Sales|\n",
+            "|102| Paul|   1|   3|  Marketing|\n",
+            "|102| Paul|   1|   4|    Finance|\n",
+            "|103| John|   1|   1|Engineering|\n",
+            "|103| John|   1|   2|      Sales|\n",
+            "|103| John|   1|   3|  Marketing|\n",
+            "|103| John|   1|   4|    Finance|\n",
+            "|104| Lisa|   2|   1|Engineering|\n",
+            "|104| Lisa|   2|   2|      Sales|\n",
+            "|104| Lisa|   2|   3|  Marketing|\n",
+            "|104| Lisa|   2|   4|    Finance|\n",
+            "|105| Evan|   3|   1|Engineering|\n",
+            "|105| Evan|   3|   2|      Sales|\n",
+            "|105| Evan|   3|   3|  Marketing|\n",
+            "|105| Evan|   3|   4|    Finance|\n",
+            "+---+-----+----+----+-----------+\n",
+            "only showing top 20 rows\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
         "# Q2\n",
         "# Implement \"Left Anti Join\" using SQL\n",
-        "# Use employee and dpto"
+        "# Use employee and dpto\n",
+        "\n",
+        "# Left Anti Join\n",
+        "result = employee.join(dpto, employee[\"dpto\"] == dpto[\"dpto\"], how=\"left_anti\")\n",
+        "result.show()"
       ],
       "metadata": {
-        "id": "EjiSSK6HOsGS"
+        "id": "EjiSSK6HOsGS",
+        "outputId": "bc5f45b9-7c94-4987-8efe-85b1be2d31b3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+---+-----+----+\n",
+            "| id| name|dpto|\n",
+            "+---+-----+----+\n",
+            "|107|Jimmy|   5|\n",
+            "+---+-----+----+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "vKQD_6w-X0Md"
       },
       "execution_count": null,
       "outputs": []
@@ -294,7 +689,8 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
